@@ -6,8 +6,13 @@ apport (0.62) UNRELEASED; urgency=low
   * apport/report.py, add_proc_info(): Check that ExecutablePath actually
     exists, so that invalid values from transient error conditions are ignored
     (such as '/usr/bin/gnome-panel\x00\x00\x8b (deleted)').
+  * apport/packaging.py: Add interface get_system_architecture() to return the
+    system architecture in the distro specific notation. This can differ from
+    get_architecture(package) on multiarch platforms such as amd64.
+  * backends/packaging-dpkg.py: Implement get_system_architecture() to return
+    dpkg --print-architecture, add a shallo test case.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 28 Feb 2007 10:15:50 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 28 Feb 2007 10:36:46 +0100
 
 apport (0.61) feisty; urgency=low
 
